Centered thermostat on page

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div id="main-wrapper">
+    <div class="d-flex justify-content-center align-items-center" id="main-wrapper">
 
       <div id="thermostat-wrapper">
         <div class="" id="thermostat-display">
