--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       <div id="thermostat-wrapper">
         <div class="" id="thermostat-display">
-          <progress value="20" max="32"></progress>
+          <progress id="progress-bar" value="20" max="32"></progress>
         </div>
         <div class="" id="thermostat-controls">
           <button class="btn" id="temp-up" type="button">Increase Temperature</button>
@@ -33,9 +33,11 @@
       <footer id="footer" class="footer py-2 px-3">
       </footer>
     </div>
-    <script src="js/Theromstat.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+    <script src="js/Events.js"></script>
+    <script src="js/Theromstat.js"></script>
   </body>
 </html>
