Implemented temperature text

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 
       <div id="thermostat-wrapper">
         <div class="" id="thermostat-display">
+          <h1><span id="temp-display"></span> &#8451;</h1>
           <progress id="progress-bar" value="20" max="32"></progress>
         </div>
         <div class="" id="thermostat-controls">
