--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <button class="btn" id="temp-up" type="button"><strong>+</strong></button>
           <button class="btn" id="temp-down" type="button"><strong>-</strong></button>
           <button class="btn" id="temp-reset" type="button">Reset</button>
-          <button class="btn" id="switch-mode" type="button">Switch Power Saving Mode</button>
+          <button class="btn" id="switch-mode" type="button">Power Saving Mode  <p class="d-inline-block" id="power-savings-indicator"></p></button>
         </div>
       </div>
 
